BUG#34892 - Transaction handling in select_create::abort let's Falcon fail

CREATE ... SELECT that fails (e.g. due to duplicate key) with
Falcon storage engine prevents to create or drop a table with
the same name in future.

Added missing trans_rollback_stmt(), which was removed by accident by
patch for BUG#12713.